# MyGstExample

./: AUTHORS  README  autogen.sh  configure.ac
include/: fs-element-added-notifier.h
src/: Makefile.am  codec-properties.ini  fps.c  fs-element-added-notifier.c  gst-my.c  gst-my.h  main.c  window.ui
